--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meraki</title>
+    <title>Ariane Betini</title>
 </head>
 <body>
     
+    <h1>Meraki</h1>
+<img src="./imagens/FxYyKIZXsAEDopx.jpeg" alt="Ariane Betini" width="437px">
 </body>
 </html>
