--- a/triby-marketing.html
+++ b/triby-marketing.html
@@ -2,20 +2,33 @@
 
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ego</title>
 </head>
+
 <body>
-    
-    <h1>Meraki</h1>
-    <p>Sou uma mulher sonhadora trabalhando para entender melhor como o mundo funciona. Minhas experiências incluem; atendimento ao cliente, pessoal, telefônico e por meio de redes sociais, já atuei em vendas setor administrativo e financeiro. Atualmente em transição de carreira, descobrindo o mundo do desenvolvimento Web. 
-<br>
-        Gosto de buscar novas ideias, aprimorar técnicas e desenvolver nova, encontrar soluções viáveis para os problemas. Meus amigos me descreveriam como uma pessoa motivada e criativa, que mantém uma atitude positiva e proativa diante das adversidades. </p>
-    <img src="./imagens/FxYyKIZXsAEDopx.jpeg" alt="Ariane Betini" width="347px">
+
+    <strong>
+        <h1>Meraki</h1>
+    </strong>
+    <p>Meraki significa que você deixa um pedaço de si mesmo, uma parte da sua alma, do seus sentimentos, em tudo o que você faz. A ideia é colocar um pouco de amor em cada detalhe. </p>
+    <p>Sou uma mulher sonhadora trabalhando para entender melhor como o mundo funciona.
+        <br> Atualmente em transição de carreira, descobrindo e amando o mundo da tecnologia. <br>
+
+        <br> <br> <br> Gosto de buscar novas ideias, aprimorar técnicas e desenvolver nova, encontrar soluções viáveis
+        para os problemas. Meus amigos me descreveriam como uma pessoa motivada e criativa, que mantém uma atitude
+        positiva e proativa diante das adversidades.
+    </p>
+    <img src="./imagens/FxYyKIZXsAEDopx.jpeg" alt="Ariane Betini" width="241px">
 
 </body>
+
 </html>
 <a target="_blank" href="https://www.linkedin.com/in/ariane-betini/"> Linkedin</a>
+
+<h4><strong>Não existe castigo nem recompensa , o que existe é consequência. O plantio é livre, mas a colheita é
+        obrigatória. Tudo na vida tem seu preço!”<h4><strong/>
