--- a/triby-marketing.html
+++ b/triby-marketing.html
@@ -5,16 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ego</title>
+    <title>Ego</title>
+    <style>
+        h1 {
+            color: rgb(139, 0, 30);
+            text-align: center;
+        }
+
+        body {
+            background-color: rgb(250, 215, 220);
+        }
+
+        p {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+    
+
+        
+    </style>
 
 </head>
 
 <body>
 
+
     <strong>
         <h1>Meraki</h1>
     </strong>
     <p>Meraki significa que você deixa um pedaço de si mesmo, uma parte da sua alma, do seus sentimentos, em tudo o que você faz. A ideia é colocar um pouco de amor em cada detalhe. </p>
+    <h1>Quem sou?</h1>
     <p>Sou uma mulher sonhadora trabalhando para entender melhor como o mundo funciona.
         <br> Atualmente em transição de carreira, descobrindo e amando o mundo da tecnologia. <br>
 
