--- a/triby-marketing.html
+++ b/triby-marketing.html
@@ -20,7 +20,13 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
-    
+    .button {
+        background-color: rgb(133, 35, 84);
+        color: aliceblue;
+        border-radius: 4px;
+        text-decoration: none;
+        padding: 15px 30px;
+    }
 
         
     </style>
@@ -47,7 +53,7 @@
 </body>
 
 </html>
-<a target="_blank" href="https://www.linkedin.com/in/ariane-betini/"> Linkedin</a>
+<a class="button" target="_blank" href="https://www.linkedin.com/in/ariane-betini/"> Linkedin</a>
 
-<h4><strong>Não existe castigo nem recompensa , o que existe é consequência. O plantio é livre, mas a colheita é
+<h4><strong>"Não existe castigo nem recompensa , o que existe é consequência. O plantio é livre, mas a colheita é
         obrigatória. Tudo na vida tem seu preço!”<h4><strong/>
